--- a/Backend/maxnumber/src/main/resources/application.properties
+++ b/Backend/maxnumber/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=maxnumber
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/alumnosdb
+spring.datasource.username=postgres
+spring.datasource.password=988156699Ms_
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
